# cakes_bot

./: .pre-commit-config.yaml  pyproject.toml
src/: bot.py  config.py  users.py  utils.py
src/handlers/: __init__.py  customer.py  maintainer.py
src/rules/: __init__.py  customer_message.py  maintainer_message.py
