[tool.poetry]
name = "cakes-bot"
version = "0.1.0"
description = ""
authors = ["Vladislav.Novikov <mb1te.comcis@gmail.com>"]
readme = "README.md"
packages = [{include = "cakes_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = "^4.3.12"
orjson = "^3.9.1"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
mypy = "^1.3.0"
ruff = "^0.0.272"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
